Refactored Exercise Response DTO